...
          </View>
        )}
      </View>

      <Stack.SearchBar
        ref={searchBarRef}
        placeholder="Search for a place or address"
        autoCapitalize="none"
        placement="integratedButton"
        allowToolbarIntegration
        hideNavigationBar={false}
        hideWhenScrolling={false}
        onChangeText={(e) => handleSearchChange(e.nativeEvent.text)}
...
        >
          Cancel
        </Stack.Toolbar.Button>
      </Stack.Toolbar>
      <Stack.Toolbar placement="right">
        <Stack.Toolbar.Button
          accessibilityLabel="Confirm"
          variant="done"
          onPress={confirmLocation}
        >
          Confirm
        </Stack.Toolbar.Button>
      </Stack.Toolbar>
...
